src/translations/zh/sdk/ios/v5/features/deep-links/deferred.mdx
---
title: "设置延迟深度链接"
description: "为您的应用配置延迟深度链接。"
slug: "zh/sdk/ios/features/deep-links/deferred"
sidebar-position: 4
multiVersion: true
---

延迟深度链接会先将用户转到 App Store，让用户安装应用，然后再将其发送至应用内具体位置。

## [工作原理](how-it-works)

延迟深度链接工作原理如下：

1. 用户点击 Adjust 深度链接。
2. Adjust 服务器将用户重定向至 App Store。
3. 用户安装并打开您的应用。
4. Adjust 服务器进行归因，并将深度链接发送至 Adjust SDK。
5. 您的应用展示最初内容，如新客户引导界面和用户登录 \(如适用\)。
6. 应用从 Adjust SDK 中调取并处理深度链接。

## [设置](setup)

<Callout type="important">

在设置 Adjust 延迟深度链接时，您需要禁用应用中其他 SDK 的延迟深度链接，并关闭其他 MMP 的深度链接设置。

</Callout>
<Callout type="seealso">

请参考[Facebook 延迟深度链接文档](https://developers.facebook.com/docs/ios/deep-linking#deferred-deep-linking)进一步了解如何为您的 Facebook 推广活动设置深度链接。

</Callout>

您可以通过两种方式在应用中设置延迟深度链接：

1. Adjust 服务器会自动将延迟深度链接发送至 Adjust SDK。用户打开应用时，Adjust 会用深度链接自动调用 `open(_:options:completionHandler:)` 方法。如果您的应用没有初始内容 \(例如：客户引导页面和用户登录\)，或者应用已经在打开深度链接前处理了此内容，那么无需进行进一步的配置，可以跳过此部分。
2. 如果您的应用存在初始内容 \(例如：客户引导页面和用户登录\)，但应用未在处理深度链接前处理内容，那么可以添加一个延迟深度链接监听器。

### [设置延迟深度链接监听器](set-up-a-deferred-deep-link-listener)

1. 为延迟深度链接设置委托回传。如果您已经配置归因回传，可以跳过这一步。

<Tabs>
<Tab title="Swift" sync="swift">
<CodeBlock title="AppDelegate.swift">

```swift
class AppDelegate: UIResponder, UIApplicationDelegate, AdjustDelegate {
}
```

</CodeBlock>
</Tab>
<Tab title="Objective-C" sync="objc">
<CodeBlock title="AppDelegate.h">

```objc
@interface AppDelegate : UIResponder <UIApplicationDelegate, AdjustDelegate>
```

</CodeBlock>
</Tab>
</Tabs>

2. 如尚未进行此操作，请创建一个 `ADJConfig` 类的实例并在应用委托中 `ADJConfig` 上设置一个委托。您需要在 SDK 初始化前在 `ADJConfig` 中设置委托。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let yourAppToken = "{YourAppToken}"
let environment = ADJEnvironmentSandbox
let adjustConfig = ADJConfig(
    appToken: yourAppToken,
    andEnvironment: environment)
adjustConfig?.delegate = self

// ...

Adjust.initSdk(adjustConfig)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJConfig *adjustConfig = [[ADJConfig alloc] initWithAppToken:@"{YourAppToken}"
                                                   andEnvironment:ADJEnvironmentSandbox];
[adjustConfig setDelegate:self];

// ...

[Adjust initSdk:adjustConfig];
```

</Tab>
</Tabs>

3. 向委托添加 `adjustDeferredDeeplinkReceived` 延迟深度链接回传方法。Adjust SDK 收到延迟深度链接后会调用该方法。
   1. 设置深度链接处理代码。
   2. 将 `adjustDeferredDeeplinkReceived` 方法返回值设为 true 或 false。该值会指示您是否希望 Adjust SDK 在深度链接处理完代码运行后调用 `open(_:options:completionHandler:)` 方法并打开应用。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func adjustDeferredDeeplinkReceived(_ deeplink: URL?) -> Bool {
   // add your code below to handle deep link
   // (for example, show onboarding screens, then open deep link content)
   // deeplink object contains the deep link

   return false
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
- (BOOL)adjustDeferredDeeplinkReceived:(NSURL *)deeplink {
      // add your code below to handle deep link
      // (for example, show onboarding screens, then open deep link content)
      // deeplink object contains the deep link

      return NO;
}
```

</Tab>
</Tabs>

## [设置 Adjust LinkMe](set-up-adjust-linkme)

<CodeBlock title="Method signature">

```objc
- (void)enableLinkMe;
```

</CodeBlock>
<Callout type="note">

请与您的营销团队协商是否需要在应用中安装 LinkMe。

</Callout>

[Adjust LinkMe 解决方案](https://help.adjust.com/zh/article/linkme)为可选功能，能通过允许应用从设备剪贴板读取深度链接信息来确保延迟深度链接表现。

<Callout type="important">

用户第一次打开应用时，Adjust SDK 会检查剪贴板。设备会显示对话框，询问用户是否允许应用读取剪贴板。

</Callout>

当用户点击 LinkMe URL 时，可以选择将链接信息复制到剪贴板。您可以使用 Adjust SDK 读取系统剪贴板，获取深度链接信息。如果含有深度链接信息，Adjust SDK 就会将用户转到应用中的正确页面。

要在应用中启用剪贴板查看功能，请调用`[ADJConfig enableLinkMe]`方法。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let yourAppToken = "{YourAppToken}"
let environment = ADJEnvironmentSandbox
let adjustConfig = ADJConfig(
    appToken: yourAppToken,
    andEnvironment: environment)
// ...
adjustConfig.enableLinkMe()
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
NSString *yourAppToken = @"{YourAppToken}";
NSString *environment = ADJEnvironmentSandbox;
ADJConfig *adjustConfig = [[ADJConfig alloc] initWithAppToken:@"{YourAppToken}"
                                                   andEnvironment:ADJEnvironmentSandbox];
/// ...
[adjustConfig enableLinkMe];
```

</Tab>
</Tabs>
